<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/number_input_layout_margin"
        android:layout_marginTop="@dimen/number_input_layout_margin"
        android:layout_marginEnd="@dimen/number_input_layout_margin"
        android:hint="@string/number_input_layout_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/count_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/count_button_margin"
        android:layout_marginTop="@dimen/count_button_margin"
        android:layout_marginEnd="@dimen/count_button_margin"
        android:text="@string/count_button_text"
        app:layout_constraintEnd_toEndOf="@id/number_input_layout"
        app:layout_constraintStart_toStartOf="@id/number_input_layout"
        app:layout_constraintTop_toBottomOf="@id/number_input_layout" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/result_text_view_margin_top"
        android:gravity="center"
        android:text="@string/result_text_view_placeholder"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@id/number_input_layout"
        app:layout_constraintStart_toStartOf="@id/number_input_layout"
        app:layout_constraintTop_toBottomOf="@id/count_button" />

</androidx.constraintlayout.widget.ConstraintLayout>