<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/loading_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.65"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="@dimen/loading_frame_translation_z"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/authorization_login_input_layout_margin"
        android:layout_marginTop="@dimen/authorization_login_input_layout_margin"
        android:layout_marginEnd="@dimen/authorization_login_input_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="@id/login_input_layout"
        app:layout_constraintEnd_toEndOf="@id/login_input_layout"
        app:layout_constraintTop_toBottomOf="@id/login_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_button_margin"
        android:layout_marginEnd="@dimen/sign_in_button_margin"
        android:text="@string/sign_in_button_text"
        app:layout_constraintStart_toStartOf="@id/login_input_layout"
        app:layout_constraintEnd_toEndOf="@id/login_input_layout"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>